feat: update index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2>About Me</h2>
             <p>
               I am a self-motivated student and aspiring programmer. I try to
-              understand learing material and do all tasks including extra
+              understand learning material and do all tasks including extra
               tasks.
             </p>
             <p>
@@ -49,7 +49,7 @@
               <li>JavaScript - beginner</li>
               <li>HTML5 - beginner</li>
               <li>CSS - beginner</li>
-              <li>GIT- beginner</li>
+              <li>GIT - beginner</li>
               <li>Visual Studio Code - beginner</li>
             </ul>
             <h2>Soft Skills</h2>
@@ -57,13 +57,13 @@
               <li>Problem-solving</li>
               <li>Effective communication skills</li>
               <li>Self-direction</li>
-              <li>Drive</li>
+              <li>Leadership</li>
               <li>Flexibility</li>
             </ul>
             <h2>Education</h2>
             <ul>
               <li>Gomel State Vocational College - Designer</li>
-              <li>Gomel State University - Psychologist(3 courses)</li>
+              <li>Gomel State University - Psychologist(3 years)</li>
               <li>Books: JavaScript for beginners, O'Reilly JavaScript</li>
               <li>Courses: RS School JavaScript Stage 0</li>
             </ul>
