feat: update files

--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
             <ul class="projects">
               <li><span>
                   <a href="https://github.com/LukashkinaMarina/human-readable-number/blob/master/src/index.js"
-                    target="_blanc">Human readable number</a></span>
+                    target="_blank">Human readable number</a></span>
               </li>
               <li><span>
                   <a href="https://github.com/LukashkinaMarina/sudoku/blob/master/src/index.js"
-                    target="_blanc">Sudoku</a>
+                    target="_blank">Sudoku</a>
                 </span>
               </li>
               <li><span>
                   <a href="https://github.com/LukashkinaMarina/expression-calculator/blob/master/src/index.js"
-                    target="_blanc">
+                    target="_blank">
                     Expression calculator</a>
                 </span>
               </li>
@@ -109,7 +109,7 @@
                   <code>
 <span class ="keyword-name">function</span> <span class="function-name">rgb</span>(<span class ="parameter-name">r, g, b</span>) {
   <span class ="keyword-name"> const</span> <span class="function-name">toHex</span>  = (<span class ="parameter-name">byte</span>) <span class ="keyword-name">=></span>{
-    <span class ="operator-name">if</span> (<span class ="parameter-name">byte</span> <= 0) <span class ="operator-name">return</span> <span class ="meaning-name">'00'</span>;
+    <span class ="operator-name">if</span> (<span class ="parameter-name">byte</span> &lt;= 0) <span class ="operator-name">return</span> <span class ="meaning-name">'00'</span>;
     <span class ="operator-name">if</span> (<span class ="parameter-name">byte</span> >= 255)<span class ="operator-name"> return</span> <span class ="meaning-name">'FF'</span>;
     <span class ="keyword-name"> const</span> <span class ="constant-name">hex</span> = <span class ="parameter-name">byte</span>.<span class="function-name">toString</span>(16);
     <span class ="operator-name">if</span> (<span class ="constant-name">hex</span>.<span class ="parameter-name">length</span> === 1) {
